--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <script src="./node_modules/jquery/dist/jquery.js"></script>
 <script src="./node_modules/ace-editor-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="./node_modules/ace-editor-builds/src-noconflict/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
-<script type="module" src="./index.js"></script>
+<script src="./dist/index.js"></script>
 
 
 </body></html>
